--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@uidotdev/usehooks": "^2.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.1"
+    "react-error-boundary": "^4.0.13",
+    "react-router-dom": "^6.23.1",
+    "tailwind-scrollbar": "^3.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
