--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@radix-ui/react-popover": "^1.0.7",
     "@tanstack/react-query": "^5.35.5",
     "@uidotdev/usehooks": "^2.4.1",
+    "babel-plugin-react-compiler": "0.0.0-experimental-c23de8d-20240515",
     "cmdk": "^1.0.0",
+    "eslint-plugin-react-compiler": "0.0.0-experimental-53bb89e-20240515",
     "jotai": "^2.8.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "19.0.0-beta-26f2496093-20240514",
+    "react-dom": "19.0.0-beta-26f2496093-20240514",
     "react-error-boundary": "^4.0.13",
     "react-router-dom": "^6.23.1",
     "tailwind-scrollbar": "^3.1.0"
