--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@uidotdev/usehooks": "^2.4.1",
     "cmdk": "^1.0.0",
     "jotai": "^2.8.0",
+    "lucide-react": "^0.378.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.13",
