--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-plugin-react-compiler": "0.0.0-experimental-53bb89e-20240515",
     "jotai": "^2.8.2",
     "lucide-react": "^0.383.0",
+    "prettier-plugin-tailwindcss": "^0.6.1",
     "react": "19.0.0-beta-26f2496093-20240514",
     "react-dom": "19.0.0-beta-26f2496093-20240514",
     "react-error-boundary": "^4.0.13",
