--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@uidotdev/usehooks": "^2.4.1",
     "babel-plugin-react-compiler": "0.0.0-experimental-c23de8d-20240515",
     "cmdk": "^1.0.0",
+    "css": "^3.0.0",
     "eslint-plugin-react-compiler": "0.0.0-experimental-53bb89e-20240515",
     "jotai": "^2.8.2",
     "lucide-react": "^0.383.0",
