--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react": "npm:types-react@rc",
+    "@types/react-dom": "npm:types-react-dom@rc",
     "@radix-ui/react-popover": "^1.0.7",
     "@tanstack/react-query": "^5.40.0",
     "@uidotdev/usehooks": "^2.4.1",
@@ -20,15 +22,17 @@
     "jotai": "^2.8.2",
     "lucide-react": "^0.383.0",
     "prettier-plugin-tailwindcss": "^0.6.1",
-    "react": "19.0.0-beta-26f2496093-20240514",
-    "react-dom": "19.0.0-beta-26f2496093-20240514",
+    "react": "19.0.0-rc.0",
+    "react-dom": "19.0.0-rc.0",
     "react-error-boundary": "^4.0.13",
     "react-router-dom": "^6.23.1",
     "tailwind-scrollbar": "^3.1.0"
   },
+  "overrides": {
+    "@types/react": "npm:types-react@rc",
+    "@types/react-dom": "npm:types-react-dom@rc"
+  },
   "devDependencies": {
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.11.0",
     "@typescript-eslint/parser": "^7.11.0",
     "@vitejs/plugin-react": "^4.3.0",
